.history/docs/proofs/2026-01-24_fix_v4/console/railway_fatal_error_after_support_fix_20260126204923.txt
Node.js v20.20.0
file:///app/routes/billing.js:935
  });
  ^
SyntaxError: Missing catch or finally after try
